--- a/conf/postgres.conf
+++ b/conf/postgres.conf
@@ -1,4 +1,4 @@
 CREATE DATABASE netbox;
-CREATE USER netbox WITH PASSWORD 'somethingsomethingsomethingdarkside';
+CREATE USER netbox WITH PASSWORD 'J5brHrAXFLQSif0K';
 GRANT ALL PRIVILEGES ON DATABASE netbox TO netbox;
 \q
