--- a/conf/postgres.conf
+++ b/conf/postgres.conf
@@ -1,3 +1,4 @@
+DROP DATABASE netbox;
 CREATE DATABASE netbox;
 CREATE USER netbox WITH PASSWORD 'J5brHrAXFLQSif0K';
 GRANT ALL PRIVILEGES ON DATABASE netbox TO netbox;
